--- a/index.html
+++ b/index.html
@@ -15,29 +15,35 @@
         />
     </head>
     <body>
-        <!-- Header -->
+        <header class="fixed-header">
+            <div class="content">
+                <!-- Navbar -->
+                <nav class="navbar">
+                    <!-- Logo -->
+                    <img src="./assets/img/Logo.svg" alt="Besnik." />
+
+                    <!-- Navigation -->
+                    <ul>
+                        <li><a href="#!">Home</a></li>
+                        <li><a href="#!">Features</a></li>
+                        <li><a href="#!">Services</a></li>
+                        <li><a href="#!">Resources</a></li>
+                        <li><a href="#!">Contact</a></li>
+                    </ul>
+
+                    <!-- Action -->
+                    <div class="action">
+                        <a href="#!" class="action-link">Sign in</a>
+                        <a href="#!" class="btn btn-action">Sign up</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+
+        <!-- Hero -->
         <main>
-            <header class="header">
+            <div class="hero-wrap">
                 <div class="content">
-                    <nav class="navbar">
-                        <!-- Logo -->
-                        <img src="./assets/img/Logo.svg" alt="Besnik." />
-
-                        <!-- Navigation -->
-                        <ul>
-                            <li><a href="#!">Home</a></li>
-                            <li><a href="#!">Features</a></li>
-                            <li><a href="#!">Services</a></li>
-                            <li><a href="#!">Resources</a></li>
-                            <li><a href="#!">Contact</a></li>
-                        </ul>
-
-                        <!-- Action -->
-                        <div class="action">
-                            <a href="#!" class="action-link">Sign in</a>
-                            <a href="#!" class="btn btn-action">Sign up</a>
-                        </div>
-                    </nav>
                     <div class="hero">
                         <div class="info">
                             <p class="sub-title">Welcome to Besnik Agency</p>
@@ -58,7 +64,7 @@
                         />
                     </div>
                 </div>
-            </header>
+            </div>
         </main>
 
         <!-- Clients -->
